fix: high contrast in card skills and store skills components

--- a/src/components/CardSkills/styles.module.css
+++ b/src/components/CardSkills/styles.module.css
@@ -71,17 +71,21 @@
   border: 0;
 }
 
+.card-skills-high-contrast .skill button {
+  padding: 0.25rem 1rem;
+}
+
 .card-skills-light .skill button {
   color: var(--blue-dark);
 }
 
 .card-skills-high-contrast .skill button {
-  border: 2px solid var(--white);
+  border: 2px solid var(--white) !important;
   border-radius: 10px;
   color: var(--white);
 }
 
 .card-skills-high-contrast .skill button:hover {
-  border-color: var(--yellow-contrast);
+  border-color: var(--yellow-contrast) !important;
   color: var(--yellow-contrast);
 }
